<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/b_submit" />

    <EditText
        android:id="@+id/ttime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bsubmit"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:hint="@string/h_time"
        android:inputType="textShortMessage"
        />

    <EditText
        android:id="@+id/tlevel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ttime"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:hint="@string/h_level"
        android:inputType="textShortMessage"
         />

    <EditText
        android:id="@+id/tarea"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tlevel"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="27dp"
        android:hint="@string/h_area"
        android:inputType="textShortMessage"
        />

    <EditText
        android:id="@+id/tage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tarea"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="34dp"
        android:hint="@string/h_age"
        android:inputType="textShortMessage"
         />

    <EditText
        android:id="@+id/tpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tage"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:hint="@string/h_password"
         />

    <EditText
        android:id="@+id/tname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:hint="@string/h_username"
        android:inputType="textShortMessage"
         >

        <requestFocus />
    </EditText>

</RelativeLayout>