<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/eusername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:hint="@string/h_username"
        android:inputType="textShortMessage" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/epassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eusername"
        android:layout_below="@+id/eusername"
        android:layout_marginTop="43dp"
        android:hint="@string/h_password"
        android:inputType="textShortMessage" 
        />

    <Button
        android:id="@+id/bsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/epassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/b_submit" />

    <Button
        android:id="@+id/bnewuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bsubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/b_newuser" />

</RelativeLayout>